--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "gulp",
-        "build": "gulp build"
+        "build": "gulp build",
+        "serve": "gulp build && oss-serve"
     },
     "keywords": [
         "gulp",
@@ -30,6 +31,7 @@
         "gulp-plumber": "^1.2.1",
         "gulp-run-sequence": "^0.3.2",
         "gulp-uglify": "^3.0.2",
-        "opn": "^6.0.0"
+        "opn": "^6.0.0",
+        "oss-serve": "^3.1.1"
     }
 }
