--- a/oss-serve.config.json
+++ b/oss-serve.config.json
@@ -1,9 +1,8 @@
 {
-  "accessKeyId": "LTAI4Fuf1LqDAdNNoA7MfnPV",
-  "accessKeySecret": "ySKWuhG9nAqs11av8ivrFbG3465vA",
+  "accessKeyId": "",
+  "accessKeySecret": "",
   "pushRoot": "dist",
-  "destination": "cl",
-  "bucket": "coronetliu",
-  "region": "oss-cn-shenzhen",
-  "baseUrl": ""
+  "destination": "dist",
+  "bucket": "coronet",
+  "region": "oss-cn-beijing"
 }
